fix overflow in history table

--- a/fidelius-ui/src/app/history/history.component.scss
+++ b/fidelius-ui/src/app/history/history.component.scss
@@ -19,6 +19,9 @@
   width: 100%
 }
 
+.updated-text {
+  word-break: break-all;
+}
 
 .actions {
   margin-right: 12px;
@@ -43,6 +46,10 @@ tr.expansion-row {
 
 .version-row td {
   border-bottom-width: 0;
+}
+
+tr.version-row {
+  height: auto;
 }
 
 .expansion-contents {
